# ARIA

./: .gitignore  ARIA_Android_Scaffold_Spec_v1_0_updated.md  ARIA_Demo_QNN_Whisper_S24Ultra_Guide_v1.3.md  ARIA_QNN_Whisper_NPU_Implementation_Guide_v1.1.md  CLAUDE.md  GPU_WHISPER_PLAN.md  README.md  build.gradle.kts  gradle.properties  gradlew  settings.gradle.kts
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CLAUDE.md  CMakeLists.txt  asr_jni.version  llama_jni.cpp  qnn_wrapper.cpp  qnn_wrapper.h  whisper_jni.cpp
app/src/main/cpp/cmake/: FindOpenCL.cmake
app/src/main/cpp/include/: whisper.h
app/src/main/java/com/stelliq/aria/: ARIAApplication.java
app/src/main/java/com/stelliq/aria/asr/: AudioBufferPool.java  AudioCaptureManager.java  CLAUDE.md  SileroVAD.java  SlidingWindowBuffer.java  TextPostProcessor.java  TranscriptAccumulator.java  WhisperEngine.java
app/src/main/java/com/stelliq/aria/db/: AARDatabase.java  AARRepository.java  CLAUDE.md
app/src/main/java/com/stelliq/aria/db/dao/: AARSessionDao.java  PipelineMetricDao.java  TranscriptSegmentDao.java
app/src/main/java/com/stelliq/aria/db/entity/: AARSession.java  PipelineMetric.java  TranscriptSegment.java
app/src/main/java/com/stelliq/aria/export/: AARExporter.java
app/src/main/java/com/stelliq/aria/llm/: AARJsonParser.java  AARPromptBuilder.java  CLAUDE.md  LlamaEngine.java  SummaryTemplate.java
app/src/main/java/com/stelliq/aria/meeting/: CLAUDE.md  MeetingClient.java  MeetingManager.java  MeetingProtocol.java  MeetingServer.java
app/src/main/java/com/stelliq/aria/model/: AARSummary.java  ModelDownloadStatus.java  SessionState.java
app/src/main/java/com/stelliq/aria/service/: ARIASessionService.java  CLAUDE.md  SessionController.java
app/src/main/java/com/stelliq/aria/ui/: CLAUDE.md  MainActivity.java  SplashActivity.java
app/src/main/java/com/stelliq/aria/ui/home/: HomeFragment.java
app/src/main/java/com/stelliq/aria/ui/recording/: RecordingFragment.java
app/src/main/java/com/stelliq/aria/ui/session/: SessionDetailFragment.java
app/src/main/java/com/stelliq/aria/ui/sessions/: SessionAdapter.java  SessionsFragment.java
app/src/main/java/com/stelliq/aria/ui/settings/: SettingsFragment.java
app/src/main/java/com/stelliq/aria/ui/view/: WaveformView.java
app/src/main/java/com/stelliq/aria/util/: AccessibilityHelper.java  Constants.java  ModelFileManager.java  NotificationHelper.java  PerfLogger.java
app/src/main/java/com/stelliq/aria/viewmodel/: SessionViewModel.java
app/src/main/res/anim/: pulse_recording.xml
app/src/main/res/color/: bottom_nav_color.xml  btn_outlined_stroke.xml  btn_outlined_text.xml  btn_primary_bg.xml  btn_primary_text.xml
app/src/main/res/drawable/: bg_bottom_nav.xml  bg_card_active.xml  bg_card_tactical.xml  bg_gradient_main.xml  bg_pause_button.xml  bg_record_button.xml  bg_record_button_glow_ring.xml  bg_record_button_large.xml  bg_recording_active.xml  bg_section_header.xml  bg_splash_gradient.xml  bg_status_badge.xml  bg_stop_button.xml  bg_timestamp_badge.xml  bg_transcript_panel.xml  circle_divider.xml  ic_add_device.xml  ic_check_circle.xml  ic_clear_cache.xml  ic_copy.xml  ic_download.xml  ic_empty_sessions.xml  ic_error.xml  ic_folder_search.xml  ic_history.xml  ic_home_outlined.xml  ic_info.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  ic_model.xml  ic_nav_home.xml  ic_nav_sessions.xml  ic_nav_settings.xml  ic_notification.xml  ic_people.xml  ic_processing.xml  ic_recording.xml  ic_refresh.xml  ic_sessions.xml  ic_sessions_filled.xml  (+7 more)
app/src/main/res/layout/: activity_benchmark.xml  activity_main.xml  activity_splash.xml  dialog_about.xml  fragment_history.xml  fragment_home.xml  fragment_model_download.xml  fragment_recording.xml  fragment_session.xml  fragment_session_detail.xml  fragment_sessions.xml  fragment_settings.xml  fragment_summarizing.xml  fragment_summary.xml  fragment_tab_summary.xml  fragment_tab_transcript.xml  item_recent_session.xml  item_session.xml  item_transcript_segment.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml  ic_launcher_round.xml
app/src/main/res/navigation/: nav_graph.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/main/res/xml/: data_extraction_rules.xml  file_paths.xml
app/src/test/java/com/stelliq/aria/asr/: SlidingWindowBufferTest.java  TextPostProcessorTest.java  TranscriptAccumulatorTest.java  WhisperEngineHallucinationTest.java
app/src/test/java/com/stelliq/aria/llm/: AARJsonParserTest.java  AARPromptBuilderTest.java
app/src/test/java/com/stelliq/aria/model/: AARSummaryTest.java  SessionStateTest.java
app/src/test/java/com/stelliq/aria/ui/view/: WaveformViewTest.java
app/src/test/java/com/stelliq/aria/util/: AccessibilityHelperTest.java
fine-tune/: README.md  requirements.txt
fine-tune/data/: training_8b_final.jsonl
fine-tune/scripts/: download_datasets.py  export_gguf.py  generate_data.py  train.py  validate.py
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
scripts/: README_BUILD_OPENCL.md  build_llama_opencl.bat  build_llama_opencl.sh  build_whisper.sh  compile_context_binary_on_device.sh  compile_whisper_encoder_aihub.py  export_whisper_encoder_onnx.py
tools/: aria_dashboard.html  aria_dashboard.py
